feat: Add Swagger/OpenAPI and Payment module
📚 Swagger/OpenAPI Documentation:
- springdoc-openapi-starter-webmvc-ui 2.3.0
- OpenApiConfig with JWT security scheme
- All controllers annotated with @Operation, @ApiResponses
- Swagger UI: http://localhost:8080/swagger-ui.html

💳 Payment Module:
- PaymentController with full CRUD
- PaymentMapper, DTOs (Request/Response)

🔧 Fixes:
- SecurityConfig: Add Swagger paths to permitAll
- AuditLogService: Fix payment log parameters
- AuthController: Fix method signatures